change the links in Nav Bar

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </div>
 
             <div class="nav-links">
-                <a href="/about.html" target="_blank">About</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/about.html" target="_blank">About</a>
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;">YouTube</a>
-                <a href="/contact.html" target="_blank">Contact</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/contact.html" target="_blank">Contact</a>
             </div>
         </div>
     </nav>
@@ -140,8 +140,8 @@
         </div>
         <div class="row copyright">
             <div class="footer-menu">
-                <a href="/about.html">About</a>
-                <a href="/contact.html">Contact</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/about.html">About</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/contact.html">Contact</a>
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
 
             </div>
