--- a/about.html
+++ b/about.html
@@ -8,14 +8,14 @@
     <title>About | Defence Short</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZzzLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="about.css">
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <link rel="stylesheet" href="https://sahil29p.github.io/Defence-Shorts/about.css">
+    <link rel="icon" type="image/x-icon" href="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg">
 
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
+        <source src="https://sahil29p.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
     </video>
     <nav>
         </div>
@@ -23,7 +23,7 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <img src="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
                 </div>
                 <div class="nav-titleN">Defence Shorts</div>
             </div>
@@ -36,8 +36,8 @@
             </div>
 
             <div class="nav-links">
-                <a href="/index.html" target="_blank">Home</a>
-                <a href="/contact.html" target="_blank">Contact</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/index.html" target="_blank">Home</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/contact.html" target="_blank">Contact</a>
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;">YouTube</a>
 
             </div>
@@ -93,8 +93,8 @@
         </div>
         <div class="row copyright">
             <div class="footer-menu">
-                <a href="/about.html">About</a>
-                <a href="/contact.html">Contact</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/about.html">About</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/contact.html">Contact</a>
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
 
             </div>
