--- a/contact.html
+++ b/contact.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contact.css">
     <title>Contact | Defence Shorts</title>
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg">
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
+        <source src="https://sahil29p.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
     </video>
     <nav>
         <div class="nav">
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <img src="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
                 </div>
                 <div class="nav-titleN">Defence Shorts</div>
             </div>
@@ -32,8 +32,8 @@
             </div>
 
             <div class="nav-links">
-                <a href="/index.html" target="_blank">Home</a>
-                <a href="/about.html" target="_blank" >About Us</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/index.html" target="_blank">Home</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/about.html" target="_blank" >About Us</a>
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;">YouTube</a>
             </div>
         </div>
@@ -119,8 +119,8 @@
         </div>
         <div class="row copyright">
             <div class="footer-menu">
-                <a href="/about.html">About</a>
-                <a href="/contact.html">Contact</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/about.html">About</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/contact.html">Contact</a>
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
 
             </div>
