--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Home | Defence Short</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <link rel="stylesheet" href="https://sahil29p.github.io/Defence-Shorts/style.css">
+    <link rel="icon" type="image/x-icon" href="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg">
 
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
+        <source src="https://sahil29p.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
     </video>
     <nav>
         </div>
@@ -24,7 +24,7 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <img src="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
                 </div>
                 <div class="nav-titleN">Defence Shorts</div>
             </div>
