--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
         <div class="row copyright">
             <div class="footer-menu">
                 <a href="https://sahil29p.github.io/Defence-Shorts/about.html">About</a>
-                <a href="https://sahil29p.github.io/Defence-Shorts/contact.html">Contact</a>
+                <a href="https://sahil29p.github.io/Defence-Shorts/index.html">Home</a>
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
 
             </div>
