Add new file of css base on compontents and modifying the contact us page(reponsive ness is not implement they best) and other changes

--- a/about.html
+++ b/about.html
@@ -8,14 +8,20 @@
     <title>About | Defence Short</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZzzLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://sahil29p.github.io/Defence-Shorts/about.css">
-    <link rel="icon" type="image/x-icon" href="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg">
-
+    <!-- <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/about.css"> -->
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="footer.css">
+    <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
+    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <style>
+    </style>
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="https://sahil29p.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
+        <!-- <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4"> -->
+        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
     </video>
     <nav>
         </div>
@@ -23,9 +29,10 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <!-- <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">-->
+                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
                 </div>
-                <div class="nav-titleN">Defence Shorts</div>
+                <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
             <div class="nav-btn">
                 <label for="nav-check">
@@ -36,9 +43,12 @@
             </div>
 
             <div class="nav-links">
-                <a href="https://sahil29p.github.io/Defence-Shorts/index.html" target="_blank">Home</a>
-                <a href="https://sahil29p.github.io/Defence-Shorts/contact.html" target="_blank">Contact</a>
-                <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;">YouTube</a>
+                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank">Home</a> -->
+                <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a>
+                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html" target="_blank">Contact</a> -->
+                <a href="contact.html" target="_blank" class="nav-link nav-link-ltr">Contact</a>
+                <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
+                    class="nav-link nav-link-ltr">YouTube</a>
 
             </div>
         </div>
@@ -93,14 +103,16 @@
         </div>
         <div class="row copyright">
             <div class="footer-menu">
-                <a href="https://sahil29p.github.io/Defence-Shorts/index.html">Home</a>
-                <a href="https://sahil29p.github.io/Defence-Shorts/contact.html">Contact</a>
+                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a> -->
+                <a href="index.html">Home</a>
+                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a> -->
+                <a href="contact.html">Contact</a>
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
-
             </div>
-            <p>Copyright &copy; 2022 Defence Shorts</p>
+            <p id="copy" class="copyright">Copyright &copy; 2022 Defence Shorts</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
