--- a/contact.html
+++ b/contact.html
@@ -5,23 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/contact.css"> -->
+    <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="footer.css">
     <title>Contact | Defence Shorts</title>
-    <link rel="icon" type="image/x-icon" href="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+    <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
+    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <style>
+        .nav{
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-        <source src="https://sahil29p.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
+        <!-- <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4"> -->
+        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
     </video>
     <nav>
         <div class="nav">
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="https://sahil29p.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <!-- <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
+                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
                 </div>
-                <div class="nav-titleN">Defence Shorts</div>
+                <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
             <div class="nav-btn">
                 <label for="nav-check">
@@ -32,63 +43,65 @@
             </div>
 
             <div class="nav-links">
-                <a href="https://sahil29p.github.io/Defence-Shorts/index.html" target="_blank">Home</a>
-                <a href="https://sahil29p.github.io/Defence-Shorts/about.html" target="_blank" >About Us</a>
-                <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;">YouTube</a>
+                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank">Home</a> -->
+                <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a>
+                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank" >About Us</a> -->
+                <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About Us</a>
+                <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
+                    class="nav-link nav-link-ltr">YouTube</a>
             </div>
         </div>
     </nav>
-    <main>
-        <section class="contact-sec">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="contact-detail">
-                            <h1 class="section-title">Contact us</h1>
-                            <!-- <span>
-                            <a href="#" class="fb"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="#" class="insta"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
-                        </span> -->
+    <div class="mainform">
+        <div class="container">
+            <div class="title">Registration</div>
+            <div class="content">
+                <form action="#" method="POST">
+                    <div class="user-details">
+                        <div class="input-box">
+                            <span class="details">Full Name</span>
+                            <input type="text" placeholder="Enter your name" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="details">Email</span>
+                            <input type="email" placeholder="Enter your email" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="details">Phone Number</span>
+                            <input type="number" placeholder="Enter your number" required>
                         </div>
                     </div>
-
-                    <div class="col-md-6">
-                        <form class="contFrm" method="POST">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <input type="text" name="name" placeholder="Your Name" class="inptFld" required />
-                                </div>
-
-                                <div class="col-sm-6">
-                                    <input type="email" name="email" placeholder="Email Address" class="inptFld"
-                                        required />
-                                </div>
-
-                                <div class="col-sm-6">
-                                    <input type="number" name="phone" placeholder="Phone Number" class="inptFld"
-                                        required />
-                                </div>
-
-                                <div class="col-sm-6">
-                                    <input type="text" name="sub" placeholder="Subject" class="inptFld" required />
-                                </div>
-
-                                <div class="col-12">
-                                    <textarea class="inptFld" rows="" cols="" placeholder="Your Message..."
-                                        required></textarea>
-                                </div>
-
-                                <div class="col-12">
-                                    <input type="submit" name="submit" value="SUBMIT" class="inptBtn" />
-                                </div>
-                            </div>
-                        </form>
+                    <div class="gender-details">
+                        <input type="radio" name="gender" id="dot-1">
+                        <input type="radio" name="gender" id="dot-2">
+                        <input type="radio" name="gender" id="dot-3">
+                        <span class="gender-title">Gender</span>
+                        <div class="category">
+                            <label for="dot-1">
+                                <span class="dot one"></span>
+                                <span class="gender">Male</span>
+                            </label>
+                            <label for="dot-2">
+                                <span class="dot two"></span>
+                                <span class="gender">Female</span>
+                            </label>
+                            <label for="dot-3">
+                                <span class="dot three"></span>
+                                <span class="gender">other</span>
+                            </label>
+                        </div>
                     </div>
-                </div>
+                    <div class="input-box">
+                        <span class="details" id="des">Description</span>
+                        <textarea name="" id="" cols="30" rows="15" placeholder="Enter Reason" required></textarea>
+                    </div>
+                    <div class="button">
+                        <input type="submit" value="Register">
+                    </div>
+                </form>
             </div>
-        </section>
-    </main>
+        </div>
+    </div>
     <footer>
         <div>
             <div class="column links">
@@ -119,21 +132,16 @@
         </div>
         <div class="row copyright">
             <div class="footer-menu">
-                <a href="https://sahil29p.github.io/Defence-Shorts/index.html">Home</a>
-                <a href="https://sahil29p.github.io/Defence-Shorts/about.html">About</a>
+                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a> -->
+                <a href="index.html">Home</a>
+                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a> -->
+                <a href="contact.html">Contact</a>
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
-
             </div>
-            <div style="text-align: center; margin-top: 20px;">
-                <p>Copyright &copy; 2022 Defence Shorts
-                    <script>
-                        document.write(new Date().getFullYear());
-                    </script>
-                </p>
-            </div>
-
+            <p id="copy" class="copyright">Copyright &copy; 2022 Defence Shorts</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
