--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Defence Short</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://sahil29p.github.io/Defence-Shorts/style.css">
-    <link rel="icon" type="image/x-icon" href="Source/IMG/logo.jpg">
+    <!-- <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/style.css"> -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="footer.css">
+    <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
+    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
 
 </head>
 
