try to resolve the resource loading problems
this commit might or might not resolve the problem just checking

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="nav-header">
                 <div class="nav-title">
                     <!-- <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <img src="../Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
