added a prefix to link
Actually  some how relative path is not working in the gitHub so to solve this issue i have add "https://vitthalgund.github.io/Defence-Shorts/"  this link as prefix to all the links to redirect and load the resources

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-    <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+<!--     <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg"> -->
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <!-- <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4"> -->
-        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
+        <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
+<!--         <source src="/Source/Video/jetBack.mp4" type="video/mp4"> -->
         <div id="default"></div>
     </video>
     <nav>
@@ -28,8 +28,8 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <!-- <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-                    <img src="../Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+<!--                     <img src="../Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
@@ -42,14 +42,14 @@
             </div>
 
             <div class="nav-links">
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank"
-                    class="nav-link nav-link-ltr">About</a> -->
-                <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank"
+                    class="nav-link nav-link-ltr">About</a>
+<!--                 <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
                     class="nav-link nav-link-ltr">YouTube</a>
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html" target="_blank"
-                    class="nav-link nav-link-ltr">Contact</a> -->
-                <a href="contact.html" target="_blank" class="nav-link nav-link-ltr">Contact</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html" target="_blank"
+                    class="nav-link nav-link-ltr">Contact</a>
+<!--                 <a href="contact.html" target="_blank" class="nav-link nav-link-ltr">Contact</a> -->
             </div>
         </div>
     </nav>
@@ -154,10 +154,10 @@
         </div>
         <div class="row copyright">
             <span class="footer-menu">
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a> -->
-                <a href="about.html">About</a>
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a> -->
-                <a href="contact.html">Contact</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a>
+<!--                 <a href="about.html">About</a> -->
+                <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a>
+<!--                 <a href="contact.html">Contact</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
             </span>
             <p id="copy" class="copyright">Copyright &copy; 2022 Defence Shorts</p>
