just assign the id to the image of logo in nav bar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" id="logo">
 <!--                     <img src="../Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
