added a prefix to link
Actually  some how relative path is not working in the gitHub so to solve this issue i have add "https://vitthalgund.github.io/Defence-Shorts/"  this link as prefix to all the links to redirect and load the resources

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="footer.css">
     <title>Contact | Defence Shorts</title>
-    <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+<!--     <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg"> -->
     <style>
         .nav{
             background-color: black;
@@ -21,8 +21,8 @@
 
 <body>
     <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-        <!-- <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4"> -->
-        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
+        <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
+<!--         <source src="/Source/Video/jetBack.mp4" type="video/mp4"> -->
     </video>
     <nav>
         <div class="nav">
@@ -43,10 +43,10 @@
             </div>
 
             <div class="nav-links">
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank">Home</a> -->
-                <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a>
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank" >About Us</a> -->
-                <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About Us</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank">Home</a>
+<!--                 <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a> -->
+                <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank" >About Us</a>
+<!--                 <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About Us</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
                     class="nav-link nav-link-ltr">YouTube</a>
             </div>
@@ -132,10 +132,10 @@
         </div>
         <div class="row copyright">
             <div class="footer-menu">
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a> -->
-                <a href="index.html">Home</a>
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a> -->
-                <a href="contact.html">Contact</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a>
+<!--                 <a href="index.html">Home</a> -->
+                <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a>
+<!--                 <a href="contact.html">Contact</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
             </div>
             <p id="copy" class="copyright">Copyright &copy; 2022 Defence Shorts</p>
