--- a/about.html
+++ b/about.html
@@ -12,16 +12,16 @@
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-    <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+<!--     <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg"> -->
     <style>
     </style>
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <!-- <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4"> -->
-        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
+        <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
+<!--         <source src="/Source/Video/jetBack.mp4" type="video/mp4"> -->
     </video>
     <nav>
         </div>
@@ -29,8 +29,8 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <!-- <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">-->
-                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" id="logo" alt="D">
+<!--                     <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
@@ -43,10 +43,10 @@
             </div>
 
             <div class="nav-links">
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank">Home</a> -->
-                <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a>
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html" target="_blank">Contact</a> -->
-                <a href="contact.html" target="_blank" class="nav-link nav-link-ltr">Contact</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank">Home</a>
+<!--                 <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a> -->
+                <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html" target="_blank">Contact</a>
+<!--                 <a href="contact.html" target="_blank" class="nav-link nav-link-ltr">Contact</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
                     class="nav-link nav-link-ltr">YouTube</a>
 
@@ -103,10 +103,10 @@
         </div>
         <div class="row copyright">
             <div class="footer-menu">
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a> -->
-                <a href="index.html">Home</a>
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a> -->
-                <a href="contact.html">Contact</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a>
+<!--                 <a href="index.html">Home</a> -->
+                <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a>
+<!--                 <a href="contact.html">Contact</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
             </div>
             <p id="copy" class="copyright">Copyright &copy; 2022 Defence Shorts</p>
