--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                         <textarea name="" id="" cols="30" rows="15" placeholder="Enter Reason" required></textarea>
                     </div>
                     <div class="button">
-                        <input type="submit" value="Register">
+                        <input type="submit" value="Submit">
                     </div>
                 </form>
             </div>
