upated the style sheet links

--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/contact.css"> -->
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/nav.css">
+    <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/contact.css">
+    <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/footer.css">
     <title>Contact | Defence Shorts</title>
     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
 <!--     <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg"> -->
