--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/contact.css">
     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/footer.css">
     <title>Contact | Defence Shorts</title>
-    <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
-<!--     <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg"> -->
+<!--     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
+    <link rel="icon" type="image/x-icon" href="Source/IMG/logo.jpg">
     <style>
         .nav{
             background-color: black;
@@ -43,9 +43,9 @@
             </div>
 
             <div class="nav-links">
-                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank">Home</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html" target="_blank" class="nav-link nav-link-ltr">Home</a>
 <!--                 <a href="index.html" target="_blank" class="nav-link nav-link-ltr">Home</a> -->
-                <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank" >About Us</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/about.html" target="_blank" class="nav-link nav-link-ltr">About Us</a>
 <!--                 <a href="about.html" target="_blank" class="nav-link nav-link-ltr">About Us</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/" target="_blank" style="color: red;"
                     class="nav-link nav-link-ltr">YouTube</a>
