--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/contact.css">
     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/footer.css">
     <title>Contact | Defence Shorts</title>
-<!--     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-    <link rel="icon" type="image/x-icon" href="Source/IMG/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+<!--     <link rel="icon" type="image/x-icon" href="Source/IMG/logo.jpg"> -->
     <style>
         .nav{
             background-color: black;
@@ -29,8 +29,8 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="D">
-<!--                     <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
+<!--                     <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="D"> -->
+                    <img src="Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
