--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     </nav>
     <div class="mainform">
         <div class="container">
-            <div class="title">Registration</div>
+            <div class="title">Contact Us</div>
             <div class="content">
                 <form action="#" method="POST">
                     <div class="user-details">
