--- a/about.html
+++ b/about.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="footer.css">
     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
 <!--     <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg"> -->
-    <style>
+        <style>
+        .nav{
+            background-color: black;
+        }
     </style>
 </head>
 
