changes in NavBar
blackground color of NavBar is changed into black

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/footer.css">
     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
 <!--     <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg"> -->
+        <style>
+        .nav{
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body>
