--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Defence Short</title>
+    <!-- <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/about.css"> -->
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZzzLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/about.css"> -->
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="footer.css">
     <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="../Source/IMG/logo.jpg">
     <style>
     </style>
 </head>
@@ -54,6 +54,7 @@
         </div>
     </nav>
     <main>
+        <div id="default"></div>
         <div class="content">
             <h3>Defence Show</h3>
             <p style="color: whitesmoke;">
@@ -96,9 +97,10 @@
             <div class="column subscribe">
                 <h2>Subscribe</h2>
                 <div>
-                    <input type="email" required placeholder="Your email id here" class="mx-3" id="element" />
-                    <button class=" mx-3" type="submit">Subscribe</button>
+                    <input type="email" required placeholder="Your email id here" id="element" />
+                    <button type="button" id="btn" onclick="">Subscribe</button>
                 </div>
+
             </div>
         </div>
         <div class="row copyright">
