contact page is active to response for the validation user input with bug fixes in website

--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,11 @@
                             </div>
                             <div class="input-box">
                                 <span class="details">Email</span>
-                                <input type="email" placeholder="Enter your email" required>
+                                <input type="email" id="email" placeholder="Enter your email" required>
                             </div>
                             <div class="input-box">
                                 <span class="details">Phone Number</span>
-                                <input type="number" placeholder="Enter your number" required>
+                                <input type="number" id="number" placeholder="Enter your number" required>
                             </div>
                         </div>
                         <div class="gender-details">
@@ -100,7 +100,7 @@
                             <textarea name="" id="" cols="30" rows="15" placeholder="Enter Reason" required></textarea>
                         </div>
                         <div class="button">
-                            <input type="submit" value="Register" id="contacts">
+                            <button type="button" id="contacts">Register</button>
                         </div>
                     </form>
                 </div>
