--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-    <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+<!--     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
+    <link rel="icon" type="image/x-icon" href="../Source/IMG/logo.jpg">
 </head>
 
 <body>
