--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-        <link rel="icon" type="image/x-icon" href="../Source/IMG/logo.jpg">
+     <link rel="icon" type="image/x-icon" href="../Source/IMG/logo.jpg">
     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
 
 </head>
@@ -29,7 +29,7 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo">
                     <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
