relative links are changed absolute links

--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="footer.css">
     <title>Contact | Defence Shorts</title>
-    <!-- <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"> -->
-    <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
+<!--     <link rel="icon" type="image/x-icon" href="/Source/IMG/logo.jpg"> -->
     <style>
         .nav {
             background-color: rgb(255, 255, 255);
@@ -23,16 +23,16 @@
 
 <body>
     <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-        <!-- <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4"> -->
-        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
+        <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
+<!--         <source src="/Source/Video/jetBack.mp4" type="video/mp4"> -->
     </video>
     <nav>
         <div class="nav">
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <!-- <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
-                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+<!--                     <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
@@ -137,10 +137,10 @@
         </div>
         <div class="row copyright">
             <div class="footer-menu">
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a> -->
-                <a href="index.html">Home</a>
-                <!-- <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a> -->
-                <a href="contact.html">Contact</a>
+                <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a>
+<!--                 <a href="index.html">Home</a> -->
+                <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a>
+<!--                 <a href="contact.html">Contact</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
             </div>
             <p id="copy" class="copyright">Copyright &copy; 2022 Defence Shorts</p>
