--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Defence Short</title>
     <!-- <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/about.css"> -->
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/nav.css">
+    <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/about.css">
+    <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZzzLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
