--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                 <h2>Subscribe</h2>
                 <div>
                     <input type="email" required placeholder="Your email id here" id="element" />
-                    <button type="button" id="btn" onclick="">Subscribe</button>
+                    <button type="button" id="contacts" onclick="">Subscribe</button>
                 </div>
 
             </div>
