--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <title>Home | Defence Short</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<!--     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/style.css"> -->
+    <!--     <link rel="stylesheet" href="https://vitthalgund.github.io/Defence-Shorts/style.css"> -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-     <link rel="icon" type="image/x-icon" href="../Source/IMG/logo.jpg">
+    <link rel="icon" type="image/x-icon" href="../Source/IMG/logo.jpg">
     <link rel="icon" type="image/x-icon" href="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg">
 
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted>
-        <source src="/Source/Video/jetBack.mp4" type="video/mp4">
+        <!-- <source src="/Source/Video/jetBack.mp4" type="video/mp4"> -->
         <source src="https://vitthalgund.github.io/Defence-Shorts/Source/Video/jetBack.mp4" type="video/mp4">
-        
+
     </video>
     <nav>
         </div>
@@ -29,8 +29,9 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo">
-                    <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt="">
+                    <img src="https://vitthalgund.github.io/Defence-Shorts/Source/IMG/logo.jpg"
+                        class="nav-title nav-header" id="logo">
+                    <!-- <img src="/Source/IMG/logo.jpg" class="nav-title nav-header" id="logo" alt=""> -->
                 </div>
                 <div class="nav-titleN nav-link">Defence Shorts</div>
             </div>
@@ -151,15 +152,16 @@
                 <div>
                     <input type="email" required placeholder="Your email id here" id="element" />
                     <button type="button" id="btn" onclick="">Subscribe</button>
+                    <div id="contacts">Subscribe</div>
                 </div>
             </div>
         </div>
         <div class="row copyright">
             <span class="footer-menu">
                 <a href="https://vitthalgund.github.io/Defence-Shorts/index.html">Home</a>
-<!--                 <a href="about.html">About</a> -->
+                <!--                 <a href="about.html">About</a> -->
                 <a href="https://vitthalgund.github.io/Defence-Shorts/contact.html">Contact</a>
-<!--                 <a href="contact.html">Contact</a> -->
+                <!--                 <a href="contact.html">Contact</a> -->
                 <a href="https://www.youtube.com/@defenceshort1/">Social</a>
             </span>
             <p id="copy" class="copyright">Copyright &copy; 2022 Defence Shorts</p>
